--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <div id="calculadora-app">
+        <div class="resultado">31.666666666666667</div>
+        <div class="btn">
+            <button>C</button>
+            <button>+/-</button>
+            <button>%</button>
+            <button></button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>X</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+            <button>0</button>
+            <button>.</button>
+            <button>=</button>
+        </div>
+   </div>
 </body>
 </html>
