--- a/index.html
+++ b/index.html
@@ -8,29 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div id="calculadora-app">
-        <div class="resultado">31.666666666666667</div>
-        <div class="btn">
-            <button>C</button>
-            <button>+/-</button>
-            <button>%</button>
-            <button></button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>X</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
-        </div>
-   </div>
+   <section>
+       <div id="calculadora-app">
+          <div class="circulos">
+              <div class="circ-verm"></div>
+              <div class="circ-amar"></div>
+              <div class="circ-verd"></div>
+          </div>
+            <div class="resultado">31.666666666666667</div>
+            <div class="btn">
+                <button class="c">C</button>
+                <button class="c">+/-</button>
+                <button class="c">%</button>
+                <button class="x">÷</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button class="x">X</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button class="x">-</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button class="x">+</button>
+                <button id="zr">0</button>
+                <button>.</button>
+                <button class="x">=</button>
+            </div>
+       </div>
+   </section>
 </body>
 </html>
