--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button class="x">+</button>
                 <button id="zr">0</button>
                 <button>.</button>
-                <button class="x">=</button>
+                <button id="igual" class="x">=</button>
             </div>
        </div>
    </section>
