--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <div class="circ-amar"></div>
               <div class="circ-verd"></div>
           </div>
-            <div class="resultado">31.666666666666667</div>
+                <input type="number" id="resultado" placeholder="31.666666666666667">
             <div class="btn">
                 <button class="c">C</button>
                 <button class="c">+/-</button>
