--- a/texte.html
+++ b/texte.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action="">
-      <input type="text" name="name">
+      <input type="text" name="name" id="name">
       <input type="submit" value="Enviar">
     </form>
     <div class="res"></div>
