--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
               <div class="circ-amar"></div>
               <div class="circ-verd"></div>
           </div>
-            <div class="resultado"></div>
+            <div class="visor" id="visor"></div>
             <div class="btn">
-                <button class="c">C</button>
-                <button class="c">+/-</button>
-                <button class="c">%</button>
-                <button class="x">÷</button>
+                <button class="c" id="limpar">C</button>
+                <button class="c" id="pos_neg">+/-</button>
+                <button class="c" id="porcent">%</button>
+                <button class="x" id="operadores">÷</button>
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-                <button class="x">X</button>
+                <button class="x" id="operadores">X</button>
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
-                <button class="x">-</button>
+                <button class="x" id="operadores">-</button>
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-                <button class="x">+</button>
+                <button class="x" id="operadores">+</button>
                 <button id="zr">0</button>
                 <button>.</button>
-                <button id="igual" class="x">=</button>
+                <button id="igual" class="x" id="igual">=</button>
             </div>
        </div>
    </section>
