--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button>3</button>
                 <button class="x" id="operador">+</button>
                 <button id="zr">0</button>
-                <button>.</button>
+                <button>,</button>
                 <button class="x" id="operador">=</button>
             </div>
        </div>
